<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>pl.lodz.p.it.ssbd2023</groupId>
  <artifactId>ssbd02</artifactId>
  <version>0.1.0</version>
  <packaging>war</packaging>


  <name>ssbd02</name>

  <developers>
    <developer>
      <name>Piotr Gągorowski</name>
      <id>236533</id>
    </developer>
    <developer>
      <name>Jakub Marszał</name>
      <id>229954</id>
    </developer>
    <developer>
      <name>Kacper Bednarski</name>
      <id>236502</id>
    </developer>
    <developer>
      <name>Michał Glapiński</name>
      <id>236534</id>
    </developer>
    <developer>
      <name>Mikołaj Kacprzyk</name>
      <id>236555</id>
    </developer>
    <developer>
      <name>Bartłomiej Dygasiński</name>
      <id>229872</id>
    </developer>
  </developers>

  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.target>17</maven.compiler.target>
      <maven.compiler.source>17</maven.compiler.source>
      <junit.version>5.9.1</junit.version>
      <maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
      <maven-failsafe-plugin.version>3.0.0-M9</maven-failsafe-plugin.version>
      <payara.version>6.2023.1</payara.version>
      <arquillian-payara.version>3.0.alpha6</arquillian-payara.version>
      <project.build.sourceDirectories>${basedir}/src/main/java</project.build.sourceDirectories>
      <checkstyle.config.location>${basedir}/checkstyle.xml</checkstyle.config.location>
  </properties>

  <dependencies>
    <dependency>
      <groupId>jakarta.platform</groupId>
      <artifactId>jakarta.jakartaee-api</artifactId>
      <version>10.0.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.26</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.5.4</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.persistence</groupId>
      <artifactId>eclipselink</artifactId>
      <version>4.0.1</version>
    </dependency>
      <dependency>
          <groupId>fish.payara.arquillian</groupId>
          <artifactId>arquillian-payara-server-managed</artifactId>
          <version>${arquillian-payara.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.jboss.arquillian.junit5</groupId>
          <artifactId>arquillian-junit5-container</artifactId>
          <version>1.7.0.Alpha14</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.hamcrest</groupId>
          <artifactId>hamcrest</artifactId>
          <version>2.2</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>jakarta.mail</groupId>
          <artifactId>jakarta.mail-api</artifactId>
          <version>2.1.0</version>
      </dependency>
      <dependency>
          <groupId>io.jsonwebtoken</groupId>
          <artifactId>jjwt</artifactId>
          <version>0.9.1</version>
      </dependency>
      <dependency>
          <groupId>javax.xml.bind</groupId>
          <artifactId>jaxb-api</artifactId>
          <version>2.1</version>
      </dependency>
      <dependency>
          <groupId>at.favre.lib</groupId>
          <artifactId>bcrypt</artifactId>
          <version>0.10.2</version>
      </dependency>

      <dependency>
          <groupId>org.microshed</groupId>
          <artifactId>microshed-testing-payara-server</artifactId>
          <version>0.9.1</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>testcontainers</artifactId>
          <version>1.17.6</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>io.rest-assured</groupId>
          <artifactId>rest-assured</artifactId>
          <version>5.3.0</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>postgresql</artifactId>
          <version>1.18.0</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>5.3.1</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-junit-jupiter</artifactId>
          <version>5.3.1</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.httpcomponents</groupId>
          <artifactId>httpclient</artifactId>
          <version>4.5.14</version>
      </dependency>
  </dependencies>

    <build>
        <testResources>
            <testResource>
                <directory>src/test/arq-payara-managed</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>com.dkanejs.maven.plugins</groupId>
                <artifactId>docker-compose-maven-plugin</artifactId>
                <version>4.0.0</version>
                <executions>
                    <execution>
                        <id>pull</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>pull</goal>
                        </goals>
                        <configuration>
                            <composeFile>${project.basedir}/Docker/docker-compose.yml</composeFile>
                            <ignorePullFailures>true</ignorePullFailures>
                        </configuration>
                    </execution>
                    <execution>
                        <id>up</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>up</goal>
                        </goals>
                        <configuration>
                            <composeFile>${project.basedir}/Docker/docker-compose.yml</composeFile>
                            <detachedMode>true</detachedMode>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M8</version>
                <configuration>
                    <environmentVariables>
                        <MAIL_MAIL>${mail.mail}</MAIL_MAIL>
                        <MAIL_PASSWORD>${mail.password}</MAIL_PASSWORD>
                    </environmentVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven-dependency-plugin.version}</version>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>fish.payara.distributions</groupId>
                                    <artifactId>payara</artifactId>
                                    <version>${payara.version}</version>
                                    <type>zip</type>
                                    <overWrite>false</overWrite>
                                    <outputDirectory>${project.build.directory}</outputDirectory>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven-failsafe-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <payara.home>${project.build.directory}/payara6</payara.home>
                        <arquillian.launch>payara-managed</arquillian.launch>
                    </systemPropertyVariables>
                    <environmentVariables>
                        <MAIL_MAIL>${mail.mail}</MAIL_MAIL>
                        <MAIL_PASSWORD>${mail.password}</MAIL_PASSWORD>
                    </environmentVariables>
                    <skipTests>false</skipTests>
                    <includes>
                        <include>**/*IT.java</include>
                        <include>**/*IntegrationTest.java</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>checkstyle</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>10.9.1</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <violationSeverity>warning</violationSeverity>
                    <failsOnError>true</failsOnError>
                    <consoleOutput>true</consoleOutput>
                    <configLocation>${checkstyle.config.location}</configLocation>
                    <sourceDirectories>${project.build.sourceDirectories}</sourceDirectories>
                    <propertyExpansion>suppressionFile=${checkstyle.config.location}</propertyExpansion>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
